WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156712
ToThis should have a fast path based on type info flags
https://bugs.webkit.org/show_bug.cgi?id=156712
Summary
ToThis should have a fast path based on type info flags
Filip Pizlo
Reported
2016-04-18 12:51:45 PDT
Patch forthcoming
Attachments
the patch
(10.02 KB, patch)
2016-04-18 12:53 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-04-18 12:53:46 PDT
Created
attachment 276659
[details]
the patch
WebKit Commit Bot
Comment 2
2016-04-18 12:55:56 PDT
Attachment 276659
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGSpeculativeJIT32_64.cpp:3846: Extra space after ( in function call [whitespace/parens] [4] ERROR: Source/JavaScriptCore/dfg/DFGSpeculativeJIT64.cpp:3901: Extra space after ( in function call [whitespace/parens] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3
2016-04-18 12:58:28 PDT
Running 32-bit debug tests now...
Geoffrey Garen
Comment 4
2016-04-18 12:59:14 PDT
Comment on
attachment 276659
[details]
the patch r=me
Filip Pizlo
Comment 5
2016-04-18 13:26:16 PDT
I have a trivial fix for 32-bit.
Filip Pizlo
Comment 6
2016-04-18 13:33:54 PDT
Landed in
http://trac.webkit.org/changeset/199686
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug